--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,14 @@
 [package]
 name = "html-entities"
 version = "0.1.0"
+license = "BSD-3-Clause"
 authors = ["Dimitri Sabadie <dimitri.sabadie@sculpteo.com>"]
+description = "A HTML entities utility crate"
+keywords = ["html", "entities", "encode", "decode", "parsing", "parser"]
+
+homepage = "https://github.com/phaazon/html-entities"
+repository = "https://github.com/phaazon/html-entities"
+documentation = "https://docs.rs/html-entities"
 
 [dependencies]
 lazy_static = "0.2.1"
